[tool.poetry]
name = "nutrition5k"
version = "0.1.0"
description = ""
authors = ["oatsty <parinayoksatayu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
torch = "^2.0.1"
torchvision = "^0.15.2"
opencv-python = "^4.7.0.72"
pyyaml = "^6.0"
json-tricks = "^3.17.1"
yacs = "^0.1.8"
scikit-learn = "^1.2.2"
pandas = "^2.0.3"
timm = "0.4.12"
einops = "^0.6.1"
fvcore = "^0.1.5.post20221221"
transformers = "4.19.2"
sentencepiece = "^0.1.99"
ftfy = "^6.1.1"
regex = "^2023.6.3"
nltk = "^3.8.1"
vision-datasets = "0.2.2"
pycocotools = "2.0.4"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
isort = "^5.12.0"
autoflake = "^2.2.0"

[tool.mypy]
# common
python_version = 3.10
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
allow_untyped_globals = true
allow_redefinition = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-exclude = "./.venv,./node_modules,./.serverless"
ignore = "E501,W503,T499,E402"

[tool.autoflake]
extend-exclude = "./.venv,./node_modules,./.serverless,**/__init__.py"
ignore = "E501,W503,T499,E402"
imports = ["django", "requests", "urllib3"]

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = "./.venv,./node_modules,./.serverless,poetry.lock,pyproject.toml,.pre-commit-config.yaml"
