[tool.poetry]
name = "nutrition5k"
version = "0.1.0"
description = ""
authors = ["oatsty <parinayoksatayu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
autoflake = "^2.2.0"
pytest = "^7.4.0"

[tool.mypy]
# common
python_version = 3.10
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
allow_untyped_globals = true
allow_redefinition = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-exclude = "./.venv,./node_modules,./.serverless"
ignore = "E501,W503,T499,E402"

[tool.autoflake]
extend-exclude = "./.venv,./node_modules,./.serverless"
ignore = "E501,W503,T499,E402"
imports = ["django", "requests", "urllib3"]

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = "./.venv,./node_modules,./.serverless,poetry.lock,pyproject.toml,.pre-commit-config.yaml"
